initial sidebar with process listing implemented

--- a/nodes/erlprocess.html
+++ b/nodes/erlprocess.html
@@ -10,7 +10,7 @@
   };
   
   RED.nodes.registerType('erlprocess',{
-    color: '#E7E7AE',
+    color: '#FFCC66',
     icon: "font-awesome/fa-genderless",
     category: 'processes',
     paletteLabel: 'Process',
@@ -18,6 +18,13 @@
       name: {
         value:"",
       },
+      pid: {
+        value: "",
+        required: true
+      },
+      capture_io: {
+        value: false
+      },      
     },
 
     inputs: 1,
@@ -66,5 +73,16 @@
   <div class="form-row">
     <label for="node-input-name"><i class="fa fa-tag"></i> <span data-i18n="node-red:common.label.name"></span></label>
     <input type="text" id="node-input-name" data-i18n="[placeholder]node-red:common.label.name">
+  </div>
+
+  <div class="form-row">
+    <input type="checkbox" id="node-input-capture_io"
+               style="display:inline-block; width:15px; vertical-align:baseline;">
+    <label for="node-input-capture_io"><span data-i18n="erlprocess.label.capture_io"></span></label>
+  </div>
+  
+  <div class="form-row">
+    <label for="node-input-pid"><i class="fa fa-circle"></i> <span data-i18n="erlprocess.label.process"></span></label>
+    <input type="text" id="node-input-pid" data-i18n="[placeholder]erlprocess.label.process">
   </div>
 </script>
