--- a/nodes/erlcaptureio.html
+++ b/nodes/erlcaptureio.html
@@ -27,12 +27,20 @@
 
     outputs: 1,
 
-    label: function() {
-      return (this.name || this._def.paletteLabel);
+    label: function () {
+      if (this.name) {
+        return this.name;
+      }
+      if (this.scope === "group") {
+        return this._("erlcaptureio.captureioGroup");
+      } else if (Array.isArray(this.scope)) {
+        return this._("erlcaptureio.nodeCount", { number: this.scope.length });
+      }
+      return this._("erlcaptureio.captureioFlow")
     },
 
-    labelStyle: function() {
-      return this.name?"node_label_italic":"";
+    labelStyle: function () {
+      return this.name ? "node_label_italic" : "";
     },
 
     // called when node is added to workspace also if copied and pasted.
