--- a/nodes/locales/en-US/erlprocess.html
+++ b/nodes/locales/en-US/erlprocess.html
@@ -5,6 +5,7 @@ Represent an existing Erlang process by name, number or rank.
 
 : payload (any) : The messager payload to send the process.
 : *msgtype* (string) : (optional) either `info`, `cast` or `call`. Defaults to `info`.
+: *pid* (pid | string) : (optiona) override the defined process and use this pid instead.
 
 ### Outputs
 
